--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "compression": "~1.0.1",
     "lodash": "~2.4.1",
     "jade": "~1.2.0",
-    "mongoose": "~3.8.8",
     "jsonwebtoken": "^0.3.0",
     "express-jwt": "^0.1.3",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "passport-google-oauth": "latest",
-    "composable-middleware": "^0.3.0",
-    "connect-mongo": "^0.4.1"
+    "composable-middleware": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
@@ -53,7 +51,6 @@
     "grunt-protractor-runner": "^1.1.0",
     "grunt-asset-injector": "^0.1.0",
     "grunt-karma": "~0.8.2",
-    "grunt-mocha-test": "~0.10.2",
     "jit-grunt": "^0.5.0",
     "time-grunt": "~0.3.1",
     "grunt-express-server": "~0.4.17",
@@ -75,8 +72,7 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "karma": "~0.12.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
-    "supertest": "~0.11.0",
-    "should": "~3.3.1"
+    "supertest": "~0.11.0"
   },
   "engines": {
     "node": ">=0.10.0"
