--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "compression": "~1.0.1",
     "lodash": "~2.4.1",
     "jade": "~1.2.0",
+    "mongoose": "~3.8.8",
     "jsonwebtoken": "^0.3.0",
     "express-jwt": "^0.1.3",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "passport-google-oauth": "latest",
-    "composable-middleware": "^0.3.0"
+    "composable-middleware": "^0.3.0",
+    "connect-mongo": "^0.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
@@ -43,9 +45,9 @@
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
-      "grunt-env": "~0.4.1",
-      "grunt-node-inspector": "~0.1.5",
-      "grunt-nodemon": "~0.2.0",
+    "grunt-env": "~0.4.1",
+    "grunt-node-inspector": "~0.1.5",
+    "grunt-nodemon": "~0.2.0",
     "grunt-angular-templates": "^0.5.4",
     "grunt-dom-munger": "^3.4.0",
     "grunt-protractor-runner": "^1.1.0",
