--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-route": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "angular-slider": "git@github.com:PopSugar/angular-slider.git#acdf0cbc85186b2f2a487e4fe9d0f9625cb44bfc",
+    "cal-heatmap": "~3.5.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
